--- a/assets/css/auctions.css
+++ b/assets/css/auctions.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 0 30rem;
+    padding: 0 20rem;
 }
 
 .auctions__top {
@@ -12,6 +12,24 @@
     flex-direction: row;
     justify-content: space-between;
     margin-bottom: 2rem;
+    padding: 0 2rem;
+}
+
+.card__img {
+    width: 30rem;
+    height: 30rem;
+    overflow: hidden;
+    cursor: pointer;
+    transition: all .4s;
+}
+.auction__card{
+    transition: all .3s ease-in-out;
+}
+.auction__card:hover{
+transform: translateY(-.5rem);
+}
+.auction__card:hover  .card__img {
+    transform: scale(1.05);
 }
 
 .auctions__top p {
@@ -57,7 +75,9 @@
     width: 100%;
     height: 100%;
     flex-direction: row;
+    padding: 1rem 0;
     justify-content: start;
+    overflow: hidden;
 }
 
 .auction__card {
@@ -65,11 +85,15 @@
     flex-direction: column;
     background-color: var(--color-secondary);
     padding: 2rem;
+    margin: 0 1.8rem;
     border-radius: 2rem;
     color: var(--color-text-primary);
     font-weight: 900;
 }
-
+.auction__card:hover .auction__card-bag{
+    visibility: visible;
+    top: 41%;
+}
 .auction__card-top {
     display: flex;
     flex-direction: column;
@@ -84,20 +108,61 @@
 .auction__card-like {
     position: absolute;
     right: 1rem;
-    top: 0;
+    top: 1rem;
+    padding: .5rem 1rem;
+    background-color: var(--color-primary);
+    border-radius: .6rem;
 }
 
+.auction__card-bag{
+    visibility: hidden;
+    font-size: 1.5rem;
+    font-weight: 700;
+    cursor: pointer;
+    position: absolute;
+    top: 44%;
+    right: 33%;
+    border-radius: 2.5rem;
+    text-transform: capitalize;
+    padding: 1.5rem;
+    background-color: var(--color-text-primary);
+    color: var(--color-secondary);
+    transition: all .3s ease-out;
+}
+.auction__card-bag:hover{
+    background-color: var(--color-ordinary);
+    color: var(--color-text-primary);
+}
+.auction__card-bag i{
+    color: var(--color-ordinary);
+    padding-right: .5rem;
+}
+.auction__card-bag:hover i{
+    color: var(--color-text-primary);
+}
 .auction__card-time {
+    padding: .5rem 1rem;
+    background-color: var(--color-primary);
+    border-radius: .6rem;
     position: absolute;
     bottom: 1rem;
     display: flex;
-    right: 10rem;
+    right: 7rem;
 }
 
-.auction_card-bottom {
+.auction__card-time::before {
+    content: '\e900';
+    font-family: 'nfts';
+    color: var(--color-ordinary);
+    font-size: 1.8rem;
+    padding-right: 1rem;
+}
+
+.auction__card-bottom {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-family: 'Urbanist', sans-serif;
 }
 
 .auction__title {
@@ -105,6 +170,31 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.auction__title h5 {
+    font-weight: 700;
+    font-size: 1.8rem;
+    letter-spacing: .1rem;
+    font-style: normal;
+    color: var(--color-text-primary);
+    font-variant: normal;
+    text-transform: capitalize;
+    text-decoration: none solid rgb(81, 66, 252);
+    text-align: start;
+    text-indent: 0rem;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.auction__title h5:hover {
+    color: var(--color-ordinary);
+}
+
+.auction__title span {
+    background-color: var(--color-ordinary);
+    padding: 0.4rem .8rem;
+    border-radius: 1rem;
 }
 
 .auction__creator {
@@ -133,12 +223,100 @@
     margin-left: 1rem;
 }
 
-.creator__info span {}
+.creator__info span {
+    color: var(--color-text-secondary);
+    font-weight: 400;
+    font-size: 1.3rem;
+}
 
-.creator__info p {}
+.creator__info a {
+    color: var(--color-text-primary);
+    font-weight: 700;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+
+.creator__info a:hover {
+    color: var(--color-ordinary);
+}
 
 .creator_right {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.creator_right span {
+    color: var(--color-text-secondary);
+    font-weight: 400;
+    font-size: 1.3rem;
+}
+
+.creator_right h5 {
+    font-weight: 700;
+    font-size: 1.8rem;
+}
+
+.slider__navigate {
+    display: flex;
+    flex-direction: row;
+    color: var(--color-text-primary);
+    width: 10vw;
+    margin-top: 2rem;
+    justify-content: center;
+}
+.slider__navigate-middle{
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: center;
+}
+.slider__circle{
+width: 1rem;
+height: 1rem;
+margin: 0 1rem;
+border-radius: 50%;
+background-color: var(--color-text-primary);
+position: relative;
+}
+.slider__circle.active-slider{
+    width: 2rem;
+    height: 2rem;
+}
+.active-slider.active-slider::before{
+    content: "";
+    position: absolute;
+    width: 1.2rem;
+    height: 1.2rem;
+    z-index: 1;
+    top: .4rem;
+    left: .4rem;
+    border-radius: 50%;
+    background-color: var(--color-text-primary);
+}
+.active-slider.active-slider::after{
+    content: "";
+    position: absolute;
+    width: 1.8rem;
+    top: .1rem;
+    left: .1rem;
+    border-radius: 50%;
+    height: 1.8rem;
+    background-color: var(--color-primary);
+}
+.slider__circle::after{
+    content: "";
+    position: absolute;
+    width: .8rem;
+    top: .1rem;
+    left: .1rem;
+    border-radius: 50%;
+    height: .8rem;
+    background-color: var(--color-primary);
+}
+.slider__navigate-next{
+    cursor: pointer;
+}
+.slider__navigate-prev{
+    cursor: pointer;
 }
