--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @font-face {
     font-family: 'nfts';
     src: url('../fonts/nfts.eot');
@@ -131,16 +132,14 @@ html{
     font-size: 62.5%;
     scroll-behavior: smooth;
     font-family: "duotone";
-    background:linear-gradient(141deg,var(--color-primary) 0%,var(--color-secondary) 51%,var(--color-primary)  75%);
+    background:var(--color-primary) ;
 
 }
 
 
 body{
     font-size: 1.5rem;
-    font-family: 'HVT';
-    background:linear-gradient(141deg,var(--color-primary) 0%,var(--color-secondary) 51%,var(--color-primary)  75%);
-}
+    font-family: 'HVT';}
 
 html,body{
 display: flex;
