--- a/assets/css/auctions.css
+++ b/assets/css/auctions.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     align-items: center;
     padding: 0 20rem;
+    margin-top: 20rem;
 }
 
 .auctions__top {
@@ -49,6 +50,8 @@ transform: translateY(-.5rem);
     letter-spacing: .1rem;
     cursor: pointer;
     position: relative;
+    color: var( --color-text-secondary);
+    transition: color .2s ease-in-out;
 }
 
 .auctions__top a:hover {
