--- a/assets/css/auctions.css
+++ b/assets/css/auctions.css
@@ -46,24 +46,20 @@ transform: translateY(-.5rem);
     z-index: 10;
     text-transform: uppercase;
     font-size: 1.7rem;
-    font-weight: bold;
+    font-weight:700;
     letter-spacing: .1rem;
     cursor: pointer;
     position: relative;
     color: var( --color-text-secondary);
-    transition: color .2s ease-in-out;
+    transition: all .5s ease-in-out;
 }
 
 .auctions__top a:hover {
     background: linear-gradient(to right, #E250E5, #4B50E6, #E250E5);
     background-clip: text;
     -webkit-background-clip: text;
-    font-weight: 700;
-    background-size: 200% 200%;
-    animation: rainbow 2s ease-in-out infinite;
-    transition: color .2s ease-in-out;
+    -webkit-text-fill-color: transparent;
 }
-
 .auctions__top a::before {
     content: '';
     position: absolute;
