--- a/assets/css/guideline.css
+++ b/assets/css/guideline.css
@@ -1,84 +1,75 @@
-#guideline{
+#guideline {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     color: var(--color-text-primary);
     width: 100%;
-    font-family: "Urbanist" ,sans-serif;
-    padding: 5rem 10rem;
+    font-family: "Urbanist", sans-serif;
+    padding: 5rem 20rem;
 }
 
-#guideline h2{
-    font-size:3.6rem ;
+#guideline h2 {
+    font-size: 3.6rem;
     font-weight: 700;
     padding: 4rem 0;
 
 }
-.guideline__steps{
+
+.guideline__steps {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-items: start;
+    justify-content: space-between;
 }
 
-.guideline__step{
-    width: 24%;
+.guideline__step {
+    width: 20%;
     display: flex;
     flex-direction: column;
-    margin: 1rem;
-    
+
 }
 
-.guideline__step-icon{
+.guideline__step svg {
     font-family: "nfts";
     margin: 1rem 0;
     position: relative;
-    width: 80%;
-    height: 100%;
-    padding: 4rem 0 4rem 2rem;
-    margin-right: 2rem;
-}
-.guideline__step-icon::before{
-    content: '\e91e';
-    position: absolute;
-    top: 0;
-    border-radius: 1rem;
-    left: 2rem;
-    font-size: 7.9rem;
-    color: var(--color-text-primary);
-    background: var(--color-ordinary);
     width: 25%;
     height: 100%;
-    text-align: center;
-    transition: all .5s;
+    transition: all 1s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
-.guideline__step-icon:hover::before{
-transform: rotateY(360deg);
+
+.guideline__step:hover svg {
+    transform: rotateY(360deg);
 }
-.guideline__step-heading{
-font-size: 2.4rem;
-font-weight: 700;
-padding: 2rem;
+
+.guideline__step-heading {
+    font-size: 2.4rem;
+    font-weight: 700;
+    padding: 2rem 0;
 }
-.guideline__step-heading a{
+
+.guideline__step-heading a {
     color: var(--color-text-primary1);
     transition: color .3s ease-in-out;
 }
-.guideline__step-heading a:hover{
+
+.guideline__step-heading a:hover {
     color: var(--color-ordinary);
 }
-.guideline__step-content{
-padding:0 2rem;
-font-size: 1.4rem;
-font-weight: 400;
+
+.guideline__step-content {
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 
-.guideline__steps .guideline__step:nth-child(2) .guideline__step-icon::before{
+.guideline__steps .guideline__step:nth-child(2) .guideline__step-icon {
     background-color: #47A432;
 }
-.guideline__steps .guideline__step:nth-child(3) .guideline__step-icon::before{
+
+.guideline__steps .guideline__step:nth-child(3) .guideline__step-icon {
     background-color: #9835FB;
 }
-.guideline__steps .guideline__step:nth-child(4) .guideline__step-icon::before{
+
+.guideline__steps .guideline__step:nth-child(4) .guideline__step-icon {
     background-color: #DF4949;
 }
