--- a/assets/css/picks.css
+++ b/assets/css/picks.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Urbanist', sans-serif;
-    padding: 10rem;
+    padding: 10rem 19rem;
     color: var(--color-text-primary);
 }
 
@@ -61,6 +61,7 @@
     font-size: 1.6rem;
     font-weight: 700;
     text-transform: capitalize;
+    margin-right: .5rem;
 }
 
 .btn-pick svg {
@@ -81,9 +82,8 @@
 .picks__middle-left {
     display: flex;
     width: 100%;
-    justify-content: space-between;
+    justify-content: start;
     flex-direction: row;
-    padding-right: 35rem;
 }
 
 .picks__middle-right {
@@ -100,7 +100,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding: 1rem 0;
-    justify-content: space-between;
+    justify-content: center;
     align-items: flex-start;
     overflow: hidden;
 }
@@ -355,8 +355,13 @@
     transition: all .5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
-.picks__bottom .picks__card:nth-child(2) .piks__card-bottom--bottom {
-    display: none;
+.picks__bottom .picks__card:nth-child(2) .piks__card-bottom--bottom,
+.picks__bottom .picks__card:nth-child(2) .picks__card-bag,
+.picks__bottom .picks__card:nth-child(2) .picks__card-history
+ {
+    opacity: .5;
+    cursor: not-allowed;
+    pointer-events: none;
 }
 
 .picks__bottom .picks__card:not(.picks__card:nth-child(2)) .picks__card-coming {
@@ -366,11 +371,10 @@
 .picks__more {
     display: flex;
     margin: 2rem auto;
-    padding: 1.5rem 2.5rem;
+    padding: 1.5rem 2.8rem;
     flex-direction: row;
     justify-content: center;
     cursor: pointer;
-    width: 10%;
     font-size: 1.5rem;
     font-weight: 700;
     color: var(--color-text-primary);
