--- a/assets/css/popular.css
+++ b/assets/css/popular.css
@@ -52,7 +52,8 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    flex-wrap: nowrap;
+    overflow: hidden;
 }
 
 .popular__card {
@@ -62,11 +63,12 @@
     border-radius: 1rem;
     padding: 1.5rem;
     text-transform: capitalize;
-    margin: 0 1rem;
-    width: 25%;
+    margin: 1rem 1rem;
+    width: 30%;
 }
 
 .popular__content {
+    width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
