--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -9,7 +9,7 @@
     font-family: 'Urbanist', sans-serif;
     font-size: 1.8rem;
     font-weight: 700;
-    height: 10vh;
+    height: 7.8rem;
     transition: top .4s .6s;
 }
 
@@ -54,14 +54,23 @@
 .navbar__link {
     cursor: pointer;
     width: 14%;
+    color: var(--color-text-secondary);
+    position: relative;
     display: flex;
     justify-content: center;
     flex-direction: row;
-    transition: all cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition-duration: 1s;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 .navbar__link:hover {
-    color: var(--color-ordinary);
+    color: var(--color-text-primary);
+    transition-duration: 1s;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
 }
 
 .navbar__link i {
@@ -180,11 +189,12 @@
     cursor: pointer;
 }
 
-#header.change{
+#header.change {
     top: 0rem;
     transition: top .4s .4s;
 }
-.menu{
+
+.menu {
     position: fixed;
     width: 4rem;
     height: 6rem;
@@ -193,23 +203,116 @@
     top: 1rem;
     left: 5rem;
     border-radius: 30rem 30rem 15rem 15rem;
-    box-shadow: .1rem .1rem .1rem var(--color-ordinary) ,
-    -.1rem -.1rem .1rem var(--color-ordinary);
+    box-shadow: .1rem .1rem .1rem var(--color-ordinary),
+        -.1rem -.1rem .1rem var(--color-ordinary);
     cursor: pointer;
     transition: top .4s .7s;
 }
-.menu::before{
+
+.menu::before {
     content: "";
     width: .3rem;
-    height: 3rem;
+    height: 4.2rem;
     background-color: var(--color-ordinary);
     position: absolute;
-    top: -2.5rem;
+    top: -4.4rem;
     left: calc(50% - 0.15rem);
     box-shadow: 0.1rem .1rem .1rem var(--color-ordinary);
 }
 
-.menu.change{
+.menu.change {
     top: 12rem;
     transition: top .3s .4s;
+}
+
+.sub__menu-one::before {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 0;
+    top: -1rem;
+    left: 2rem;
+    border-style: solid;
+    border-width: 0 1rem 1rem 1rem;
+    border-color: transparent transparent #ffffff transparent;
+}
+
+.sub__menu-one {
+    display: none;
+    width: 18rem;
+    background-color: var(--color-text-primary);
+    flex-direction: column;
+    color: var(--color-text-accent);
+    position: absolute;
+    top: 5rem;
+    left: 2rem;
+    font-size: 1.8rem;
+    font-weight: 700;
+    border-bottom-left-radius: .4rem;
+    border-bottom-right-radius: .4rem;
+    transition-duration: 1s;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+ul.active-submenu{
+    transition-duration: 1s;
+    transition-property: all;
+    transition-duration: 1s;
+    transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    display: flex;
+}
+.sub__menu-one li {
+    text-transform: capitalize;
+    width: 100%;
+    padding: 2rem 0 2rem 1rem;
+    position: relative;
+    --color-text-secondary: #E9E9EA;
+    border-bottom: .1rem solid var(--color-text-secondary);
+    transition: padding .3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+.sub__menu-one li::after {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: .4rem;
+    left: .4rem;
+    top: 3rem;
+    background-color: var(--color-ordinary);
+    border-radius: .5rem;
+    transition: all .3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
+}
+
+.sub__menu-one li:hover::after {
+    width: 1.5rem;
+}
+
+.sub__menu-one li:hover {
+    padding: 2rem 0 2rem 2.5rem;
+    color: var(--color-ordinary);
+}
+
+.sub__menu-one > li.has-child::before {
+    font-family: 'light';
+    content: '\f105';
+    position: absolute;
+    left: 15rem;
+}
+.sub__menu-one > li:hover .sub__menu-two{
+    display: flex;
+}
+.sub__menu-two {
+    display: none;
+    width: 130%;
+    background-color: var(--color-text-primary);
+    flex-direction: column;
+    color: var(--color-text-accent);
+    position: absolute;
+    top: 0rem;
+    left: 17rem;
+    font-size: 1.8rem;
+    font-weight: 700;
+    border-bottom-left-radius: .4rem;
+    border-bottom-right-radius: .4rem;
 }
