update font hero btns

--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -157,6 +157,8 @@
     flex-direction: row;
     justify-content: start;
     margin: 4rem 0;
+    font-size: 1.5rem;
+    font-weight: 700;
 }
 .btn-explore{
     height: 6rem;
