--- a/assets/css/seller.css
+++ b/assets/css/seller.css
@@ -1,4 +1,4 @@
-#top-seller{
+#top-seller {
     margin: 6rem 0;
     width: 100%;
     display: flex;
@@ -6,39 +6,41 @@
     flex-direction: column;
     font-family: 'Urbanist', sans-serif;
 }
-.seller__top{
+
+.seller__top {
     display: flex;
     font-family: '';
     flex-direction: row;
     justify-content: space-between;
     font-size: 3.6rem;
     font-weight: 700;
-    padding:  4rem 0rem;
+    padding: 4rem 0rem;
 }
 
-.seller__top-left{
+.seller__top-left {
     font-family: 'Urbanist', sans-serif;
     letter-spacing: .1rem;
     text-transform: capitalize;
     color: var(--color-text-primary);
 }
 
-.seller__top-right{
+.seller__top-right {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     font-size: 2rem;
 }
 
-.seller__prev{
+.seller__prev {
     padding: 1rem;
     background-color: var(--color-primary);
-    color: var( --color-text-secondary);
+    color: var(--color-text-secondary);
     border: .1rem solid var(--color-ordinary);
     border-radius: 50%;
     margin-right: .5rem;
 }
-.seller__next{
+
+.seller__next {
     background-color: var(--color-text-primary);
     color: var(--color-ordinary);
     border-radius: 50%;
@@ -46,14 +48,14 @@
     margin-right: .5rem;
 }
 
-.seller__bottom{
+.seller__bottom {
     display: flex;
     flex-direction: row;
     color: var(--color-text-primary);
     overflow: hidden;
 }
 
-.seller_card{
+.seller_card {
     width: 10.5rem;
     display: flex;
     margin: 0 2.6rem;
@@ -62,11 +64,23 @@
     font-size: 1.8rem !important;
     font-weight: 700 !important;
     position: relative;
+    transition: all .3s ease-in-out;
 }
-.seller_card img{
+
+.seller_card:hover {
+    box-shadow: var(--color-ordinary) 0px 25px 50px -12px;
+}
+.seller_card:hover img{
+    border-radius: 50%;
+    transform: rotate(360deg);
+    transition: all .5s ease-in-out;
+}
+
+.seller_card img {
     border-radius: 3.5rem;
 }
-.seller_card::before{
+
+.seller_card::before {
     font-family: 'light';
     content: "\f00c";
     width: 2.8rem;
@@ -81,7 +95,8 @@
     right: -1rem;
     z-index: 11;
 }
-.seller_card h5{
+
+.seller_card h5 {
     text-align: center;
     margin: .8rem 0;
     font-size: 1.8rem;
@@ -89,12 +104,14 @@
     transition: all 0.3s ease-in-out;
     cursor: pointer;
 }
-.seller_card h5:hover{
+
+.seller_card h5:hover {
     color: var(--color-ordinary);
 }
-.seller_card span{
+
+.seller_card span {
     text-align: center;
     color: var(--color-text-secondary);
     color: var(--color-text-secondary);
-    
+
 }
