--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -149,14 +149,13 @@
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
-    font-family: "duotone";
     background: var(--color-primary);
 
 }
 
 body {
     font-size: 1.5rem;
-    font-family: 'HVT';
+    font-family: 'Urbanist', sans-serif;
 }
 
 html, body {
@@ -217,7 +216,19 @@ a {
 
 .container {
     width: 100%;
-    height: 101%;
+    height: 100%;
     margin: 0 auto;
     padding: 0;
 }
+
+@keyframes pulse {
+    from {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.21);
+    }
+    to {
+      transform: scale(1);
+    }
+  }
