--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,12 +1,15 @@
 #header {
-    width: 100%;
+    width: 93vw;
     z-index: 99999;
     background-color: var(--color-primary);
     color: var(--color-text-primary);
     position: fixed;
     top: -10rem;
     border-bottom: .01rem solid #fefefe;
+    border-left: 0.1rem solid #fefefe;
+    border-right: 0.1rem solid #fefefe;
     font-family: 'Urbanist', sans-serif;
+    padding: .5rem;
     font-size: 1.8rem;
     font-weight: 700;
     height: 7.8rem;
@@ -24,19 +27,12 @@
     z-index: -11;
 }
 
-.header__left {
-    width: 20%;
-    padding-left: 2rem;
-}
-
 .header__center {
-    width: 50%;
     display: flex;
     flex-direction: column;
 }
 
 .header__right {
-    width: 30%;
     display: flex;
     flex-direction: row;
     justify-content: end;
@@ -53,10 +49,10 @@
 
 .navbar__link {
     cursor: pointer;
-    width: 14%;
     color: var(--color-text-secondary);
     position: relative;
     display: flex;
+    padding: 0 .5rem;
     justify-content: center;
     flex-direction: row;
     transition-duration: 1s;
