--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,137 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Urbanist:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-@font-face {
-    font-family: 'nfts';
-    src: url('../fonts/nfts.eot');
-    /* IE9 Compat Modes */
-    src: url('../fonts/nfts.eot') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../fonts/nfts.woff') format('woff2'),
-        /* Super Modern Browsers */
-        url('../fonts/nfts.woff') format('woff'),
-        /* Pretty Modern Browsers */
-        url('../fonts/nfts.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../fonts/nfts.svg') format('svg');
-    /* Legacy iOS */
-}
-
-@font-face {
-    font-family: 'brands';
-    src: url('../fonts/fa-brands-400﹖.eot');
-    /* IE9 Compat Modes */
-    src: url('../fonts/fa-brands-400.eot') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../fonts/fa-brands-400.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../fonts/fa-brands-400.woff') format('woff'),
-        /* Pretty Modern Browsers */
-        url('../fonts/fa-brands-400.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../fonts/fa-brands-400.svg') format('svg');
-    /* Legacy iOS */
-}
-
-@font-face {
-    font-family: 'duotone';
-    src: url('../fonts/fa-duotone-900﹖.eot');
-    /* IE9 Compat Modes */
-    src: url('../fonts/fa-duotone-900.eot') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../fonts/fa-duotone-900.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../fonts/fa-duotone-900.woff') format('woff'),
-        /* Pretty Modern Browsers */
-        url('../fonts/fa-duotone-900.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../fonts/fa-duotone-900.svg') format('svg');
-    /* Legacy iOS */
-}
-
-@font-face {
-    font-family: 'light';
-    src: url('../fonts/fa-light-300﹖.eot');
-    /* IE9 Compat Modes */
-    src: url('../fonts/fa-light-300﹖.eot') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../fonts/fa-light-300.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../fonts/fa-light-300.woff') format('woff'),
-        /* Pretty Modern Browsers */
-        url('../fonts/fa-light-300.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../fonts/fa-light-300.svg') format('svg');
-    /* Legacy iOS */
-}
-
-@font-face {
-    font-family: 'regular';
-    src: url('../fonts/fa-regular-400﹖.eot');
-    /* IE9 Compat Modes */
-    src: url('../fonts/fa-regular-400.eot') format('embedded-opentype'),
-        /* IE6-IE8 */
-        url('../fonts/fa-regular-400.woff2') format('woff2'),
-        /* Super Modern Browsers */
-        url('../fonts/fa-regular-400.woff') format('woff'),
-        /* Pretty Modern Browsers */
-        url('../fonts/fa-regular-400.ttf') format('truetype'),
-        /* Safari, Android, iOS */
-        url('../fonts/fa-regular-400.svg') format('svg');
-    /* Legacy iOS */
-}
-
-@font-face {
-    font-family: 'solid';
-    src: url("../fonts/fa-solid-900.eot");
-    /* IE9 Compat Modes */
-    src: url("../fonts/fa-solid-900.eot") format('embedded-opentype'),
-        /* IE6-IE8 */
-        url("../fonts/fa-solid-900.woff2") format('woff2'),
-        /* Super Modern Browsers */
-        url("../fonts/fa-solid-900.woff") format('woff'),
-        /* Pretty Modern Browsers */
-        url("../fonts/fa-solid-900.ttf") format('truetype'),
-        /* Safari, Android, iOS */
-        url("../fonts/fa-solid-900.svg") format('svg');
-    /* Legacy iOS */
-}
-
-
-
-@font-face {
-    font-family: 'Olivier';
-    src: url('../fonts/olivier\ Regular\ 400.ttf');
-}
-
-@font-face {
-    font-family: 'HVT';
-    src: url('../fonts/HelveticaNeue\ Thin.ttf');
-}
-
-@font-face {
-    font-family: 'HVT-bold';
-    src: url('../fonts/Helvetica-Bold-Font.ttf');
-}
-
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    border: 0;
-}
+@import './fonts.css';
+@import './animation.css';
 
 .theme-dark {
-    --bg-footer: #0d0d11;
+
     --color-primary: #14141F;
     --color-secondary: #343444;
     --color-accent: #8950E6;
     --color-ordinary: #5141FA;
+    --light-color: #fffafa;
+
+    /* Texts */
     --color-text-primary: #fff;
     --color-text-secondary: #E9E9EA;
     --color-text-accent: #000f;
+    --light-gray-color: #adadb0;
+
+    /* Secondary btn border */
+    --gray-color: #606067;
+    /* Icons bg, Cards bg, */
+    --dark-gray-color: #343444;
+    /* Background */
+    --dark-color: #14141f;
+    /* Live Auctions */
+    --black-color: #030303;
+    /* Footer bg */
+    --bg-footer: #0d0d11;
 }
 
 .theme-light {
@@ -146,16 +40,43 @@
     --color-text-accent: #e4edf1;
 }
 
+:root {
+    --border-raduis-tiny: 0.12rem;
+    --border-raduis-xs: 0.25rem;
+    --border-raduis-sm: 0.5rem;
+    --border-raduis-md: 1rem;
+    --border-raduis-lg: 1.5rem;
+    --border-raduis-xl: 2rem;
+    --border-raduis-2xl: 2.5rem;
+    --border-raduis-3xl: 3rem;
+
+    --font-size-sm: 0.75rem;
+    --font-size-md: 1rem;
+    --font-size-lg: 1.25rem;
+    --font-size-xl: 1.5rem;
+}
+
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    text-decoration: none;
+    outline: none;
+    border: 0;
+}
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
-    background: var(--color-primary);
-
+    font-family: 'Urbanist', sans-serif;
 }
 
 body {
     font-size: 1.5rem;
-    font-family: 'Urbanist', sans-serif;
+    background-color: var(--color-primary);
 }
 
 html, body {
@@ -165,6 +86,12 @@ html, body {
 
 main {
     flex-grow: 1;
+}
+
+button,
+span,
+input[type="text"]::placeholder {
+    font-family: inherit;
 }
 
 button {
@@ -181,26 +108,33 @@ a {
 }
 
 .btn {
+    padding: 1rem 1.5rem;
+    background-color: transparent;
     font-family: inherit;
-    padding: 1rem 2rem;
-    border-radius: 3.5rem;
-    outline: 0;
+    font-weight: normal;
+    font-size: 1rem;
+    color: var(--light-color);
+    outline: none;
     border: none;
-    box-shadow: none;
-    transition: all 0.3s ease;
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    border: 2px solid var(--color-ordinary);
-    color: var(--color-text-primary);
-    background: transparent none repeat scroll 0 0;
-    font-weight: 700;
-    letter-spacing: .1rem;
 }
 
 .btn:hover {
-    background: var(--color-text-primary);
-    color: var(--color-ordinary);
-    border: 2px solid var(--color-text-primary);
+    cursor: pointer;
+}
+
+/* button primary */
+
+.btn__primary {
+    box-shadow: inset 0 0 0 0.2rem var(--primary-color);
+    -webkit-box-shadow: inset 0 0 0 0.2rem var(--primary-color);
+    -ms-box-shadow: inset 0 0 0 0.2rem var(--primary-color);
+    -o-box-shadow: inset 0 0 0 0.2rem var(--primary-color);
+    transition: all 0.3s ease;
+}
+
+.btn__primary:hover {
+    color: var(--primary-color);
+    background-color: var(--light-color);
 }
 
 .btn__primary {
@@ -216,22 +150,144 @@ a {
 
 .container {
     width: 100%;
-    height: 100%;
     margin: 0 auto;
-    padding: 0;
+    padding: 0 1rem;
 }
-.container > svg {
+
+.container>svg {
     position: absolute;
     top: -10rem;
 }
-@keyframes pulse {
-    from {
-      transform: scale(1);
+
+.flex {
+    display: flex;
+    -webkit-display: flex;
+    -moz-display: flex;
+    -o-display: flex;
+    -ms-display: flex;
+}
+
+.flex-column {
+    flex-direction: column;
+}
+
+.justify-content-center {
+    justify-content: center;
+}
+
+.justify-content-space-between {
+    justify-content: space-between;
+}
+
+.justify-content-space-around {
+    justify-content: space-around;
+}
+
+.justify-content-space-evenly {
+    justify-content: space-evenly;
+}
+
+.align-items-center {
+    align-items: center;
+}
+
+.pt-1 {
+    padding-top: 1rem;
+}
+
+.pt-2 {
+    padding-top: 2rem;
+}
+
+.pt-3 {
+    padding-top: 3rem;
+}
+
+.pt-4 {
+    padding-top: 4rem;
+}
+
+.pb-1 {
+    padding-bottom: 1rem;
+}
+
+.pb-2 {
+    padding-bottom: 2rem;
+}
+
+.pb-3 {
+    padding-bottom: 3rem;
+}
+
+.pb-4 {
+    padding-bottom: 4rem;
+}
+
+.pr-1 {
+    padding-right: 1rem;
+}
+
+.pr-2 {
+    padding-right: 2rem;
+}
+
+.pr-3 {
+    padding-right: 3rem;
+}
+
+.pr-4 {
+    padding-right: 4rem;
+}
+
+.pl-1 {
+    padding-left: 1rem;
+}
+
+.pl-2 {
+    padding-left: 2rem;
+}
+
+.pl-3 {
+    padding-left: 3rem;
+}
+
+.pl-4 {
+    padding-left: 4rem;
+}
+
+/* Container Media Query */
+@media only screen and (min-width: 576px) {
+    .container {
+        max-width: 540px;
     }
-    50% {
-      transform: scale(1.21);
+}
+
+@media only screen and (min-width: 768px) {
+    .container {
+        max-width: 720px;
     }
-    to {
-      transform: scale(1);
+}
+
+@media only screen and (min-width: 992px) {
+    .container {
+        max-width: 960px;
     }
-  }
+}
+
+@media only screen and (min-width: 1200px) {
+    .container {
+        max-width: 1140px;
+    }
+}
+
+@media only screen and (min-width: 1400px) {
+    .container {
+        max-width: 1320px;
+    }
+}
+
+@media only screen and (min-width: 1700px) {
+    .container {
+        max-width: 180rem;
+    }
+}
