--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -98,6 +98,12 @@
     flex-direction: row;
     margin-right: 1.4rem;
 }
+.btn-explore:hover {
+    background-color: var(--color-ordinary);
+    color: var(--light-color);
+    box-shadow: inset 0 0 0 .2rem var(--color-ordinary);
+}
+
  .btn-explore p{
      padding-right: 1rem;
  }
@@ -112,6 +118,12 @@
     align-items: center;
     flex-direction: row;
 }
+.btn-create:hover {
+    background-color: var(--color-ordinary);
+    color: var(--light-color);
+    box-shadow: inset 0 0 0 .2rem var(--color-ordinary);
+}
+
  .btn-create p{
      padding-right: 1rem;
  }
