--- a/assets/css/hero.css
+++ b/assets/css/hero.css
@@ -26,6 +26,7 @@
 .slider__right img {
     position: absolute;
     animation: moveSlider 10s infinite linear;
+    z-index: 50;
 }
 
 .hero__bg {
@@ -37,7 +38,6 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-    padding-left: 20rem;
     margin-top: 5rem;
 }
 
@@ -162,7 +162,7 @@
     width: 3.2rem;
     height: 3.2rem;
     top: 40rem;
-    right: 32rem;
+    right: 20rem;
     animation: circle_xr 10s infinite linear;
 }
 
@@ -170,7 +170,7 @@
     width: 4.8rem;
     height: 4.8rem;
     top: 40rem;
-    right: 66rem;
+    right: 60rem;
     animation: circle_x 10s infinite linear;
 }
 
@@ -185,8 +185,8 @@
 .circle__shape-52 {
     width: 5.2rem;
     height: 5.2rem;
-    top: 14rem;
-    left: 93rem;
+    top: 10rem;
+    left: 85rem;
     animation: circle_empty 10s infinite linear;
 }
 
@@ -204,7 +204,7 @@
 .circle__shape-68 {
     width: 6.8rem;
     height: 6.8rem;
-    right: 24rem;
+    right: 18rem;
     top: 12rem;
     animation: circle_x 10s infinite linear;
 }
