--- a/assets/css/picks.css
+++ b/assets/css/picks.css
@@ -3,7 +3,6 @@
     display: flex;
     flex-direction: column;
     font-family: 'Urbanist', sans-serif;
-    padding: 10rem 19rem;
     color: var(--color-text-primary);
 }
 
@@ -112,8 +111,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding: 1rem 0;
-    justify-content: left;
-    align-items: flex-start;
+    justify-content: space-between;
     overflow: hidden;
 }
 
@@ -121,7 +119,7 @@
     display: flex;
     flex-direction: column;
     background-color: var(--color-secondary);
-    padding: 2rem;
+    padding: 3rem;
     margin: 1rem .8rem;
     border-radius: 2rem;
     color: var(--color-text-primary);
