--- a/assets/css/socials.css
+++ b/assets/css/socials.css
@@ -1,4 +1,5 @@
 .vertical__social {
+    width: 20rem;
     display: flex;
     justify-content: left;
     align-items: center;
@@ -6,7 +7,7 @@
     filter: url("#goo");
     position: fixed;
     top: 10rem;
-    right: 0;
+    left: -4rem;
     z-index: 9999;
 }
 
@@ -14,7 +15,7 @@
     z-index: 99999;
     position: fixed;
     display: flex;
-    right: 5rem;
+    left: 5rem;
     justify-content: center;
     align-items: center;
     width: 4rem;
@@ -111,6 +112,7 @@
 .clicked {
     opacity: 1;
     transition: 1.2s all ease;
+    left: 5rem;
     transform: translateX(4.6rem);
 }
 
