--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -13,6 +13,7 @@
     /* Texts */
     --color-text-primary: #fff;
     --color-text-secondary: #E9E9EA;
+    --color-text-onSecondary: #7a798a;
     --color-text-accent: #000f;
     --light-gray-color: #adadb0;
 
