--- a/assets/css/deatils/product.css
+++ b/assets/css/deatils/product.css
@@ -221,15 +221,169 @@
     transition: all 0.3s ease;
     background-color: var(--color-primary);
 }
-
 .product__button:hover {
     color: var(--color-ordinary);
-    background-color: var(--color-text-primary);
-    transition: all .3s;
+    transition: all 0.3s ease;
+    background-color: var(--color-text-secondary);
 }
 
 .product__button::before {
     content: "\e901";
     font-family: 'nfts';
     padding-right: 1rem;
+}
+
+.product__extra {
+    font-size: 0;
+    box-shadow: 0 0 10rem rgba(0, 0, 0, 0.5);
+    border-radius: .3rem;
+    overflow: hidden;
+    position: relative;
+    height: 31.9rem;
+    width: 100%;
+    background-color: var(--color-primary);
+}
+.extra__title{
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    border-bottom: .1rem solid var(--gray-color);
+}
+
+.extra__title h4.active {
+    color: var(--color-ordinary);
+    border-bottom: .1rem solid var(--color-ordinary);
+    z-index: 40;
+    padding: 1rem;
+    background-color: var(--color-secondary);
+}
+
+.show-tab{
+    opacity: 1 !important;
+    transition: opacity .3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.extra__title h4 {
+    font-size: 1.6rem;
+    padding: 1.5rem 1.6rem;
+    text-align: center;
+    background: inherit;
+    color: inherit;
+    position: relative;
+    transition: all 0.25s ease;
+    cursor: pointer;
+
+}
+
+
+.extra__tabs {
+    position: relative;
+    height: 10rem;
+    font-size: 1.6rem;
+}
+
+.extra__subtab {
+    position: absolute;
+    padding: 1rem;
+    width: 100%;
+    top: 0;
+    opacity: 0;
+    transition: 0.25s ease;
+    color: var(--color-text-primary);
+}
+
+.extra__subtab h3 {
+    font-weight: 200;
+    margin: 1rem 0;
+}
+
+.extra__subtab p {
+    margin: 1rem 0;
+}
+
+.extra__subtab p, .extra__subtab i {
+    font-size: 1.3rem;
+}
+
+.tablist__history {
+    height: 26rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+}
+
+.sublist {
+    height: inherit;
+}
+
+.sublist li {
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-radius: 1rem;
+    border-bottom: .1rem solid var(--gray-color);
+}
+
+.sublist-account {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.sublist-account img {
+    border-radius: 1rem;
+    width: 5rem;
+    height: 5rem;
+}
+
+.account__info {
+    font-size: 1.3rem;
+    font-weight: 400;
+    color: var(--color-text-secondary);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding-left: 1rem;
+}
+
+.account__info--name {
+    display: flex;
+    flex-direction: row;
+}
+
+.account__info--name h6 a {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: var(--color-text-primary);
+}
+
+.account__info--name span {
+    padding: .1rem .5rem;
+}
+
+.sublist-price {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.sublist-price h5 {
+    font-size: 1.4rem;
+    font-weight: 700;
+}
+
+.sublist-price span {
+    font-size: 1.3rem;
+    font-weight: 400;
+}
+.tablist__history{
+z-index: 400;
+}
+.tablist__provenance{
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--color-text-secondary);
+    letter-spacing: .1rem;
+    line-height: 2;
 }
