--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -153,7 +153,7 @@ a {
     padding: 0 14rem;
 }
 
-.container > svg {
+.container>svg {
     position: absolute;
     top: -10rem;
 }
@@ -289,4 +289,26 @@ a {
     .container {
         max-width: 180rem;
     }
+}
+
+::-webkit-scrollbar {
+    width: .8rem;
+    border-radius: 100vw;
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-accent);
+    border-radius: 100vw;
+    margin-block: .5rem;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+    background-color: var(--color-primary);
+    border: .2rem solid var(--color-accent);
+
+}
+::-webkit-scrollbar-thumb:hover{
+    cursor: pointer;
+    background-color: var(--gray-color);
 }
