--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -312,3 +312,56 @@ a {
     cursor: pointer;
     background-color: var(--gray-color);
 }
+
+.scroll__btn i{
+    font-family: 'solid';
+    font-size: 2rem;
+}
+.scroll__btn i::after{
+    content: "\f325";
+}
+.scroll__btn{
+    position: fixed;
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    right: 1rem;
+    bottom: 1rem;
+    cursor: pointer;
+    color: var(--color-text-primary);
+    background: var(--color-ordinary);
+    opacity: 0;
+    transform: translateY(10rem);
+    transition: all 0.5s ease;
+    outline: none;
+    border: 0;
+    overflow: hidden;
+  }
+  .scroll__btn::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    left: 0rem;
+    bottom: 0.0rem;
+    z-index: 2;
+    border-radius: 50%;
+    background: var(--color-secondary);
+    border: 0.2rem solid var(--color-secondary);
+    opacity: 0.4;
+    animation: shine 1s infinite 2s;
+  }
+  @keyframes shine {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
+    }
+  }
+  
+  .scroll__btn-show {
+    opacity: 1;
+    transform: translateY(0rem);
+  }
+  
