--- a/assets/css/auctions.css
+++ b/assets/css/auctions.css
@@ -1,10 +1,10 @@
-
 #live-auctions {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 30rem;
+    padding: 0 10rem;
 }
 
 .auctions__top {
@@ -23,15 +23,6 @@
     cursor: pointer;
     transition: all .4s;
 }
-.auction__card{
-    transition: all .3s ease-in-out;
-}
-.auction__card:hover{
-transform: translateY(-.5rem);
-}
-.auction__card:hover  .card__img {
-    transform: scale(1.05);
-}
 
 .auctions__top p {
     text-transform: capitalize;
@@ -46,11 +37,11 @@ transform: translateY(-.5rem);
     z-index: 10;
     text-transform: uppercase;
     font-size: 1.7rem;
-    font-weight:700;
+    font-weight: 700;
     letter-spacing: .1rem;
     cursor: pointer;
     position: relative;
-    color: var( --color-text-secondary);
+    color: var(--color-text-secondary);
     transition: all .5s ease-in-out;
 }
 
@@ -60,6 +51,7 @@ transform: translateY(-.5rem);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
+
 .auctions__top a::before {
     content: '';
     position: absolute;
@@ -84,15 +76,26 @@ transform: translateY(-.5rem);
     flex-direction: column;
     background-color: var(--color-secondary);
     padding: 3rem;
-    margin: 0 1.1rem;
+    margin: 0 .6rem;
     border-radius: 2rem;
     color: var(--color-text-primary);
     font-weight: 900;
+    transition: all .3s ease-in-out;
 }
-.auction__card:hover .auction__card-bag{
+
+.auction__card:hover {
+    transform: translateY(-.5rem);
+}
+
+.auction__card:hover .card__img {
+    transform: scale(1.05);
+}
+
+.auction__card:hover .auction__card-bag {
     visibility: visible;
     top: 41%;
 }
+
 .auction__card-top {
     display: flex;
     flex-direction: column;
@@ -113,7 +116,7 @@ transform: translateY(-.5rem);
     border-radius: .6rem;
 }
 
-.auction__card-bag{
+.auction__card-bag {
     visibility: hidden;
     font-size: 1.5rem;
     font-weight: 700;
@@ -128,17 +131,21 @@ transform: translateY(-.5rem);
     color: var(--color-secondary);
     transition: all .3s ease-out;
 }
-.auction__card-bag:hover{
+
+.auction__card-bag:hover {
     background-color: var(--color-ordinary);
     color: var(--color-text-primary);
 }
-.auction__card-bag i{
+
+.auction__card-bag i {
     color: var(--color-ordinary);
     padding-right: .5rem;
 }
-.auction__card-bag:hover i{
+
+.auction__card-bag:hover i {
     color: var(--color-text-primary);
 }
+
 .auction__card-time {
     padding: .5rem 1rem;
     background-color: var(--color-primary);
@@ -264,25 +271,29 @@ transform: translateY(-.5rem);
     margin-top: 2rem;
     justify-content: center;
 }
-.slider__navigate-middle{
-display: flex;
-flex-direction: row;
-justify-content: space-around;
-align-items: center;
+
+.slider__navigate-middle {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
-.slider__circle{
-width: 1rem;
-height: 1rem;
-margin: 0 1rem;
-border-radius: 50%;
-background-color: var(--color-text-primary);
-position: relative;
+
+.slider__circle {
+    width: 1rem;
+    height: 1rem;
+    margin: 0 1rem;
+    border-radius: 50%;
+    background-color: var(--color-text-primary);
+    position: relative;
 }
-.slider__circle.active-slider{
+
+.slider__circle.active-slider {
     width: 2rem;
     height: 2rem;
 }
-.active-slider.active-slider::before{
+
+.active-slider.active-slider::before {
     content: "";
     position: absolute;
     width: 1.2rem;
@@ -293,7 +304,8 @@ position: relative;
     border-radius: 50%;
     background-color: var(--color-text-primary);
 }
-.active-slider.active-slider::after{
+
+.active-slider.active-slider::after {
     content: "";
     position: absolute;
     width: 1.8rem;
@@ -303,7 +315,8 @@ position: relative;
     height: 1.8rem;
     background-color: var(--color-primary);
 }
-.slider__circle::after{
+
+.slider__circle::after {
     content: "";
     position: absolute;
     width: .8rem;
@@ -313,9 +326,11 @@ position: relative;
     height: .8rem;
     background-color: var(--color-primary);
 }
-.slider__navigate-next{
+
+.slider__navigate-next {
     cursor: pointer;
 }
-.slider__navigate-prev{
+
+.slider__navigate-prev {
     cursor: pointer;
 }
