--- a/assets/css/deatils/product.css
+++ b/assets/css/deatils/product.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 15rem auto;
+    margin: 15rem 10rem;
 }
 
 .product__left {
@@ -30,21 +30,21 @@
 .example > .block::before {
 	position: absolute;
 	top: -1.8rem;
-	left: 7.5rem;
+	left: 8rem;
 	z-index: 2;
 	display: block;
 	content: '';
 	width: 3rem;
-	height: 18rem;
+	height: 30%;
 	background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
 	background: linear-gradient(to right, rgba(255,255,255,0) 0%, rgba(255,255,255,.3) 100%);
 	transform: skewY(-15deg) rotate(95deg);
 }
 .example > .block:nth-child(2):before {
 	top: -2rem;
-	left: 10.8rem;
+	left: 11rem;
 	width: 2rem;
-	height: 23rem;
+	height: 33%;
 }
 .example > .block:hover::before {
 	animation: shine .75s;
