--- a/assets/css/picks.css
+++ b/assets/css/picks.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     font-family: 'Urbanist', sans-serif;
     color: var(--color-text-primary);
+    padding: 0 10rem;
 }
 
 .picks__top {
@@ -109,12 +110,19 @@
     width: 100%;
     height: 100%;
     flex-direction: row;
-    flex-wrap: wrap;
     padding: 1rem 0;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
+.picks__card--wrapper{
+    display: flex;
+    margin: 0 auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+}
 .picks__card {
     display: flex;
     flex-direction: column;
