--- a/assets/css/seller.css
+++ b/assets/css/seller.css
@@ -1,6 +1,6 @@
 #top-seller {
-    margin: 6rem 0;
     width: 100%;
+    padding: 10rem;
     display: flex;
     flex-direction: column;
     font-family: 'Urbanist', sans-serif;
